a little work on section 7

--- a/recoltes-et-semailles/part-0-letter/2.md
+++ b/recoltes-et-semailles/part-0-letter/2.md
@@ -1,5 +1,5 @@
 ### 2. Birth of Harvests and Sowings (retrospective in a flash)
-In this pre-letter, I would now like to tell you in a few pages (if possible) about what the questions are in Harvests and Sowings &mdash; to tell you in a more detailed manner that which the subtitle alone could not: "Reflections and testimony of a mathematician's past" (my past, as you'll have guessed...) There are many things in Harvests and Sowings, and some people will without doubt see different things in it: a _voyage_ to the discoveries of a past; a _meditation_ on existence; a _tableau de mœurs_ of an environment and of an epoch (or a painting of insidious and impeccable slips from one epoch to another...); a _survey_ (almost policing at times, and at others verging on a swashbuckler novel in the sidestreets of the mathematical metropolis...); a vast _mathematical rambling_ (which will shake off more than one...); a practical treatise in applied psychoanalysis (or, if preferred, a book of "phychoanalysis fiction"); a panegyric of the _knowledge of self_; "My _confessions_"; an intimate _journal_; a psychology of _discovery and of creation_; a _formal accusation_ [fr: réquisitoire] (merciless, as it has to be...), even a _settling of accounts_ in "the high society of mathematics" (and without giving away any presents...). This much is certain, at no moment was I upset when writing, while I learned and saw all colors. If your important tasks allow you the leisure to read it, it would surprise me that you were bored by reading me. Unless you force yourself, who knows...
+In this pre-letter, I would now like to tell you in a few pages (if possible) about what the questions are in Harvests and Sowings &mdash; to tell you in a more detailed manner that which the subtitle alone could not: "Reflections and testimony of a mathematician's past" (my past, as you'll have guessed...) There are many things in Harvests and Sowings, and some people will without doubt see different things in it: a _voyage_ to the discoveries of a past; a _meditation_ on existence; a _tableau de mœurs_ of an environment and of an epoch (or a painting of insidious and impeccable slips from one epoch to another...); an _investigation_ (almost policing at times, and at others verging on a swashbuckler novel in the sidestreets of the mathematical metropolis...); a vast _mathematical rambling_ (which will shake off more than one...); a practical treatise in applied psychoanalysis (or, if preferred, a book of "phychoanalysis fiction"); a panegyric of the _knowledge of self_; "My _confessions_"; an intimate _journal_; a psychology of _discovery and of creation_; a _formal accusation_ [fr: réquisitoire] (merciless, as it has to be...), even a _settling of accounts_ in "the high society of mathematics" (and without giving away any presents...). This much is certain, at no moment was I upset when writing, while I learned and saw all colors. If your important tasks allow you the leisure to read it, it would surprise me that you were bored by reading me. Unless you force yourself, who knows...
 
 Visibly, this is not only addressed to mathematicians. It is true also that at certain moments, it is addressed more to mathematicians than to others. In this pre-letter to the "letter of Harvests and Sowings", I would like to resume and bring out especially, precisely, that which may concern you more particularly as a mathematician. The most natural, for doing this, would be recount to you simply how I have come, gradually, to write one after the other these four or five "thick books" [fr: pavés] in question.
 
