--- a/recoltes-et-semailles/part-0-letter/6.md
+++ b/recoltes-et-semailles/part-0-letter/6.md
@@ -9,7 +9,7 @@ It is this part of the work, bad looking and not to say (often times) crappy, wh
 
 This is also the "obscure" part, the "yin" or _"feminine"_ part of the work of discovery. The complementary aspect, the "clear", or "yang" or _"masculine"_ part, would rather resemble work by strikes of a hammer or a weight, on a sharpened burin or on a wedge of tempered steel. (Tools already fully ready for use, and of an efficiency which has already been proven...) Each aspect has its reason for being and its function, in inseparable symbiosis with one another &mdash; or better put, they are _husband_ and _wife_ of the inseparable couple of two original cosmic forces, whose incessantly renewed embrace incessantly brings back the obscure creative toils of conception, of gestation and of birth &mdash; of the birth of _a child_, of something new.
 
-The second thing on which I felt the need to express myself, in my famous "introduction" both personal and "philosophical" for a mathematical text, was the subject of the nature of precisely creative work. I have already realized, for many years, that this nature was generally ignored, obscured by clichés for all comers and by repressions and ancestral fears. [...], I have discovered it only later, progressively, over the days and months, throughout the reflection and the "survey" pursued in Harvests and Sowings. It is after the "kick-off" of this reflection, over some pages dated to June 1983, that I was seized for the first time by the scope of this apparently anodyne and yet stupefying fact, only for so long as one stops a little bit: this "creator among all" [fr: créatrice entre toutes] of which I've come to speak in the work of discovery, _is reflected practically nowhere_ in the texts or discourses which are supposed to present such a work (or at least, its most tangible fruits); that these are textbooks and other didactic texts, or articles and original memoires, or oral courses and presentations in seminars etc. There has been, since millennia it seems, since the very origins of mathematics and others arts and sciences, a sort of "conspiration of silence" around these _"unmentionable labors"_ [fr: inavouables labeurs] that were a prelude to the hatching of every new idea, big or small, coming to renew our awareness of a portion of this world, in perpetual creation, where we live.
+The second thing on which I felt the need to express myself, in my famous "introduction" both personal and "philosophical" for a mathematical text, was the subject of the nature of precisely creative work. I have already realized, for many years, that this nature was generally ignored, obscured by clichés for all comers and by repressions and ancestral fears. [...], I have discovered it only later, progressively, over the days and months, throughout the reflection and the "investigation" pursued in Harvests and Sowings. It is after the "kick-off" of this reflection, over some pages dated to June 1983, that I was seized for the first time by the scope of this apparently anodyne and yet stupefying fact, only for so long as one stops a little bit: this "creator among all" [fr: créatrice entre toutes] of which I've come to speak in the work of discovery, _is reflected practically nowhere_ in the texts or discourses which are supposed to present such a work (or at least, its most tangible fruits); that these are textbooks and other didactic texts, or articles and original memoires, or oral courses and presentations in seminars etc. There has been, since millennia it seems, since the very origins of mathematics and others arts and sciences, a sort of "conspiration of silence" around these _"unmentionable labors"_ [fr: inavouables labeurs] that were a prelude to the hatching of every new idea, big or small, coming to renew our awareness of a portion of this world, in perpetual creation, where we live.
 
 In fact, it seems like the repression of this awareness and of this aspect or of this stage, the most crucial of all in every work of discovery (and in creative work in general), is so effective, so internalized by even those who nonetheless know such work first-hand, that one could often swear that even they have eradicated every trace of it from their conscious memory. A little like in an excessively puritan society, a woman would have eradicated from her memory, in relation to each of those children whom she made it her mission to blow and wipe, the moment of embrace (suffered unwillingly) that conceived it, long months of childbearing (experienced as an impropriety), and the long hours of childbirth (endured as a gross ordeal, followed finally by the delivery).
 
@@ -21,10 +21,11 @@ Here we are approaching the moment, it seems, when will be eradicated in everyon
 
 ---
 
+<a name="footnote-95"></a>
 <sup>95</sup>(&ast;) This degradation is moreover not limited to just the "world of mathematics". One finds it similarly in the whole of scientific life, and even deeper than that, in the contemporary world on a global scale. A primer of observation and reflection in this sense is to be found in the note "Le muscle et la tripe" which opens the reflection on yin and yang ([note n&deg; 106](../table-of-contents.md#muscle-tripe)).
 
-<sup>96</sup>(&ast;&ast;) It is the evolution examined in the note cited in the preceding footnote. The connection between it and the Burial (of my person and of my work) make their appearance and are examined in the notes "Les Obsèques du Yin (yang enterre yin (4))", "La circonstance providentielle &mdash; ou l'Apothéose", "Le désaveu (1) &mdash; ou le rappel", "Le désaveu (2) &mdash; ou la métamorphose" (n&deg;s [124](../table-of-contents.md#obseques-yin), [151](../table-of-contents.md#circonstance), [152](../table-of-contents.md#desaveu-1), [153](../table-of-contents.md#desaveu-2)). See also the recent footnotes (in part 4 of Harvests and Sowings) "Les détails inutiles" ([n&deg; 171(v)](../table-of-contents.md#details-inutiles), part (c) "Des choses qui ressemblent à rien... &mdash; ou le dessèchement") and "L'album de famille" ([n&deg; 173](../table-of-contents.md#album-famille), part c. "Celui entre tous &mdash; ou l'acquiescement").
+<sup>96</sup>(&ast;&ast;) It is the evolution examined in the note cited in the preceding footnote. The connection between it and the Burial (of my person and of my work) make their appearance and are examined in the notes "Les Obsèques du Yin (yang enterre yin (4))", "La circonstance providentielle &mdash; ou l'Apothéose", "Le désaveu (1) &mdash; ou le rappel", "Le désaveu (2) &mdash; ou la métamorphose" (n&deg;s [124](../table-of-contents.md#obseques-yin), [151](../table-of-contents.md#circonstance), [152](../table-of-contents.md#desaveu-1), [153](../table-of-contents.md#desaveu-2)). See also the recent footnotes (in part IV of Harvests and Sowings) "Les détails inutiles" ([n&deg; 171(v)](../table-of-contents.md#details-inutiles), part (c) "Des choses qui ressemblent à rien... &mdash; ou le dessèchement") and "L'album de famille" ([n&deg; 173](../table-of-contents.md#album-famille), part c. "Celui entre tous &mdash; ou l'acquiescement").
 
-<sup>97</sup>(&ast;&ast;&ast;) The aspect which is most often at the center of attention in Harvests and Sowings, and especially in the two "survey" parts (part 2 or "La robe de l'Empereur de Chine", and part 4 or "Les Quatre Opérations"), and also those, perhaps, which have "flabbergasted" me the most, is the degradation of the professional ethics, expressing itself as a looting. a mine clearance and a shameless scheming, practiced among some of the most prestigious and brilliant mathematicians of the day, and this (to a very large extent) with full knowledge of it all. For certain other aspects that are more delicate, and moreover directly linked to this, I refer to the note already cited ([n&deg; 173](../table-of-contents.md#details-inutiles) part c.) "Des choses qui ressemblent à rien... &mdash; ou le dessèchement".
+<sup>97</sup>(&ast;&ast;&ast;) The aspect which is most often at the center of attention in Harvests and Sowings, and especially in the two "investigative" parts (part II or "La robe de l'Empereur de Chine", and part IV or "Les Quatre Opérations"), and also those, perhaps, which have "flabbergasted" me the most, is the degradation of the professional ethics, expressing itself as a looting. a mine clearance and a shameless scheming, practiced among some of the most prestigious and brilliant mathematicians of the day, and this (to a very large extent) with full knowledge of it all. For certain other aspects that are more delicate, and moreover directly linked to this, I refer to the note already cited ([n&deg; 173](../table-of-contents.md#details-inutiles) part c.) "Des choses qui ressemblent à rien... &mdash; ou le dessèchement".
 
 <sup>98</sup>(&ast;) This expression is cited and commented upon in the note just cited in the preceding footnote.
