first draft of section 7

--- a/recoltes-et-semailles/part-0-letter/7.md
+++ b/recoltes-et-semailles/part-0-letter/7.md
@@ -5,16 +5,18 @@ The interpellation which came to me from the world of mathematicians, and which 
 
 <!-- bookmark -->
 
-This was already strongly felt, if not formulated, since the years before. It was only confirmed and made more precise, in a manner always unexpected and sometimes stupefying, throughout Harvests and Sowings. It was clearly apparent already from the moment when a reflection of "philosophical" and general nature suddenly became a personal testimony (in the section "L'étranger bienvenu" opening the chapter "Naissance de la crainte" already cited).
+This was already strongly felt, if not formulated, already years before. It was only confirmed and made more precise, in a manner always unexpected and sometimes stupefying, throughout Harvests and Sowings. It was clearly apparent already from the moment when a reflection of "philosophical" and general nature suddenly became a personal testimony (in the section "The welcome foreigner" ([n&deg; 9](../table-of-contents.md#part-1-3)) opening the chapter "Birth of a concern" already cited).
 
+This perception didn't however appear in the tone of a sour or bitter recrimination, but (by the internal logic of the writing and by the different attitude that it evokes) in that of an _interrogation_: what was my own part in this degradation, in this loss of respect that I see today? That is the principal interrogation which spans and carries this first part of Harvests and Sowings, until the moment it finally resolves into a clear and unequivocal conclusion<sup>100</sup>(&ast;&ast;). Before then, this degradation had appeared to me as suddenly "fallen from the sky", in an inexplicable and moreover more outrageous, intolerable way. In the course of the reflection, I discovered that it had continued insidiously, surely without anyone detecting it [...], throughout fifty and sixty years, _including in myself_.
 
+The recognition of this humble fact, surely and without any appearance quite obvious, marks a first crucial turn in the testimony, and an immediate qualitative change<sup>101</sup>(&ast;&ast;&ast;). This was a first essential thing that I had to learn, about my past as a mathematician and about myself. This awareness of a _share of responsibility_ which fell on me in the general degradation (awareness more or less acute following the moments of reflection) rested like a base note and as a reminder, throughout Harvests and Sowings. It was thus, especially, at times when my reflection assumed the proportions of an investigations on the disgraces and on the inequities of an epoch. Together with the desire to understand, thus with the curiosity which animates and carries forward all true work of discovery, it is this humble awareness (repeatedly forgotten along the way and resurfacing after all, where one least expects it...) which has preserved my testimony [...]
 
-[...]
+This absence of complacency toward myself has likewise given me this inner calm, or this strength, which has saved me from the traps of complacency toward others, or even just toward those of a false "discretion". All the things I thought I had to say, at one moment or another of the reflection, whether it be about me, or about those of my colleagues, ex-students or friends, or about a milieu, or about an epoch, I have said, without ever having to banish my misgivings. For those, it has sufficed for me each time to examine them attentively, so that they fade without leaving any traces.
 
 ---
 
 <sup>99</sup>(&ast;) Here again, there is a formulation which applies itself not only to a certain limited social milieu, where I have had ample occasion to see the thing up close, but seems to me to summarize a certain degradation all over the modern world. (Compare with footnote [<sup>95</sup>(&ast;)](./6.md#footnote-95).) In the very limited setting of the record of an "investigation" pursued in Harvests and Sowings, this formulation appears in the note of last April 2, "Le respect" ([n&deg; 179](../table-of-contents.md#le-respect)).
 
-<sup>100</sup>(&ast;&ast;)
+<sup>100</sup>(&ast;&ast;) In the sections "La mathématique sportive" and "Fini le manège" ([n&deg; 40, 41](../table-of-contents.md#sportive)).
 
-<sup>101</sup>(&ast;&ast;&ast;)
+<sup>101</sup>(&ast;&ast;&ast;) The next day, the testimony deepened in a meditation about myself, and guard<sup>[?]</sup> this particular quality in the weeks that followed, until the end of the "first breath" of Harvests and Sowings (with the section "Le poids d'un passé", [n&deg; 50](../table-of-contents.md#poids-passe)).
