work a little on section 8

--- a/recoltes-et-semailles/part-0-letter/8.md
+++ b/recoltes-et-semailles/part-0-letter/8.md
@@ -1,7 +1,13 @@
 ### 8. "My family" &mdash; or the connivance
-It is not my intention in this letter to review all the "highlights" [fr: moments forts] (or all the "critical times" [fr: moments sensibles]) in the writing of Harvests and Sowings, or in that of its stages<sup>102</sup>(&ast;). That it suffices for me to say that 
+It is not my intention in this letter to review all the "highlights" [fr: moments forts] (or all the "critical times" [fr: moments sensibles]) in the writing of Harvests and Sowings, or in that of its stages<sup>102</sup>(&ast;). Suffice it to say that there has been, in this work, four clearly marked big stages or four "breaths" &mdash; like the breaths of respiration, or like the successive _waves_ in an emerging train of waves, I cannot say how, of these large silent bodies, immobile and moving, without limits and without name, of an unknown and bottomless sea that is "me", or rather, of a sea infinitely larger and deeper than this "me" that it carries and that it nourishes. These "breaths" or these "waves" are materialized in the four parts of Harvests and Sowings presently written. Each wave came without my having called upon it nor in the least foreseen it, and at no time could I have said where it was going to take me nor when it would end. And when it had ended and a new wave already followed it, even at a time when I always thought it had reached the end of my momentum (which would also be, at the bitter end, the end of Harvests and Sowings!), while I was however already being lifted and carried toward another breath of the same vast movement. It is only with the retreat that this appears clearly and that it reveals itself unequivocally as a _structure_ in what had been experienced as an act of movement.
 
-<sup>102</sup>(&ast;)
+And surely, this movement did not end with my final point (very provisional!) in Harvests and Sowings, and will not end any more with the final point of this letter to you, which is one of the "times" of this movement. And it was not born on a day of June 1983, or of February 1984, when I say down in front of my machine to write [...] (or resume) a certain introduction to a certain mathematical publication. It was born (or rather, it was reborn...) nine years ago, on a certain day of which I have kept recollection (while so many distant or close things of my past have whittled away), the day when meditation appeared in my life...
+
+[...]
+
+---
+
+<sup>102</sup>(&ast;) You will find a short retrospective record, of the whole of the first three parts of Harvests and Sowings, in the two groups of notes "Les fruits du soir" ([n&deg; 179-182](../table-of-contents.md#fruits-soir)) and "Découverte d'un passé " ([n&deg; 183-186](../table-of-contents.md#decouverte-passe)).
 
 <sup>103</sup>(&ast;)
 
