work a little on section 8

--- a/recoltes-et-semailles/part-0-letter/8.md
+++ b/recoltes-et-semailles/part-0-letter/8.md
@@ -1,31 +1,54 @@
 ### 8. "My family" &mdash; or the connivance
-It is not my intention in this letter to review all the "highlights" [fr: moments forts] (or all the "critical times" [fr: moments sensibles]) in the writing of Harvests and Sowings, or in that of its stages<sup>102</sup>(&ast;). Suffice it to say that there has been, in this work, four clearly marked big stages or four "breaths" &mdash; like the breaths of respiration, or like the successive _waves_ in an emerging train of waves, I cannot say how, of these large silent bodies, immobile and moving, without limits and without name, of an unknown and bottomless sea that is "me", or rather, of a sea infinitely larger and deeper than this "me" that it carries and that it nourishes. These "breaths" or these "waves" are materialized in the four parts of Harvests and Sowings presently written. Each wave came without my having called upon it nor in the least foreseen it, and at no time could I have said where it was going to take me nor when it would end. And when it had ended and a new wave already followed it, even at a time when I always thought it had reached the end of my momentum (which would also be, at the bitter end, the end of Harvests and Sowings!), while I was however already being lifted and carried toward another breath of the same vast movement. It is only with the retreat that this appears clearly and that it reveals itself unequivocally as a _structure_ in what had been experienced as an act of movement.
+It is not my intention in this letter to review all the "highlights" [fr: moments forts] (or all the "critical times" [fr: moments sensibles]) in the writing of Harvests and Sowings, or in that of its stages<sup>102</sup>(&ast;). Suffice it to say that there have been, in this work, four clearly marked big stages or four "breaths" &mdash; like the breaths of respiration, or like the successive _waves_ in an emerging train of waves, I cannot say how, of these large silent bodies, immobile and moving, without limits and without name, of an unknown and bottomless sea that is "me", or rather, of a sea infinitely larger and deeper than this "me" that it carries and that it nourishes. These "breaths" or these "waves" are materialized in the four parts of Harvests and Sowings presently written. Each wave came without my having called upon it nor in the least foreseen it, and at no time could I have said where it was going to take me nor when it would end. And when it had ended and a new wave already followed it, even at a time when I always thought it had reached the end of my momentum (which would also be, at the bitter end, the end of Harvests and Sowings!), while I was however already being lifted and carried toward another breath of the same vast movement. It is only with the retreat that this appears clearly and that it reveals itself unequivocally as a _structure_ in what had been experienced as an act and as a movement.
 
-And surely, this movement did not end with my final point (very provisional!) in Harvests and Sowings, and will not end any more with the final point of this letter to you, which is one of the "times" of this movement. And it was not born on a day of June 1983, or of February 1984, when I say down in front of my machine to write [...] (or resume) a certain introduction to a certain mathematical publication. It was born (or rather, it was reborn...) nine years ago, on a certain day of which I have kept recollection (while so many distant or close things of my past have whittled away), the day when meditation appeared in my life...
+And surely, this movement did not end with my final point (very provisional!) in Harvests and Sowings, and will not end any more with the final point of this letter to you, which is one of the "times" of this movement. And it was not born on a day of June 1983, or of February 1984, when I sat down in front of my machine to write [...] (or resume) a certain introduction to a certain mathematical publication. It was born (or rather, it was reborn...) nine years ago, on a certain day of which I have kept recollection (while so many distant or close things of my past have whittled away...), the day when meditation appeared in my life...
+
+But I digress again, letting myself be carried away (and taken away... [fr: porter/emporter]) by the images and associations born in the moment, instead of holding wisely to the thread of an "aim", of a plan. My aim today was to follow up on the account, as brief as it may be, of the "discovery of the Burial" last April, at a moment when since two weeks I thought to have finished Harvests and Sowings &mdash; as if fallen on me from a waterfall above, in the space of barely three or four weeks, discoveries one greater and more incredible than the other &mdash; so big and so crazy even that still over months, I had the biggest trouble "believing the testimony of my healthy faculties", to liberate myself from an insidious _incredulity_ in the face of the evidence<sup>103</sup>(&ast;). This secret and tenacious incredulity did not dissipate until finally last October (six months after the discovery of the "the Burial in all its splendor", following the visit of my friend and former student (occult, it is true) Pierre Deligne<sup>104</sup>(&ast;&ast;). For the first time, I then saw myself confronted with the Burial no longer through _texts_, talking to me (in admittedly eloquent terms!) about the denigration, the pillage and the massacre of a work, and of the burial (in the form of the absent master) of a certain style and of a certain approach to mathematics &mdash but in a way this time direct and tangible, under familiar features and by a well known voice, with affable and ingenuous intonations. The burial was finally in front of me, "in the flesh", under busy and anodine traits that I recognized well by this time, but that I regarded for the first time with new eyes, a new attention. Here is deploying himself before me the one who, in the course of my reflection of the preceding months, revealed himself as the Officiating Priest at my solemn funeral, as the "priest in chasuble" at the same time as the chief architect and the main "beneficiary" of an "operation" without precedent, hidden inheritor of a work delivered to derision and pillage...
+
+This encounter placed itself at the beginning of the "third wave" in Harvests and Sowings, when I had just engaged in a long meditation on the yin and the yang, in the pursuit of an elusive and tenacious association of ideas. At the time, this short episode only left the trace of an echo of a few lines, in passing. It marked however an important moment, whose fruits didn't appear clearly until months later.
+
+There was a second such moment of confrontation with "the Burial in the flesh". It had been barely ten days, and it was coming to relaunch another time, "at the last minute", a never ending investigation which ceaselessly started again. This time, it was a simple phone call to Jean-Pierre Serre <sup>105</sup>(&ast;). This conversation came "aimlessly" [fr: à bâtons rompus] to confirm in a striking way beyond all expectations, what (just a few days before) I had come to explain at length<sup>106</sup>(&ast;&ast;), and almost unwillingly, on the subject of the role played by Serre in my Burial and on a "secret agreement" in him about what took place "right under his nose", without pretending like nothing was seen or sensed [fr: de rien voir ni de rien sentir].
+
+Here again, appropriately, the conversation was all "cool" and amicable, and visibly these amicable dispositions in Serre in my regard are also the most sincere and veritable ones. This does not prevent that this time I could truly _see_, or "touch" as I would like to write, this "agreement" [fr: acquiescement] that I had just finished to admit to myself; "secret" no doubt (as I wrote earlier) but above all _rushed_ [fr: empressé], as I could then see it without any possibility of doubt. A rushed and unreserved agreement, so that what needs to be buried would be buried, and so that, wherever [...]
 
 [...]
+
+<sup>107</sup>(&ast;&ast;&ast;)
+<sup>108</sup>(&ast;)
+<sup>109</sup>(&ast;&ast;)
+<sup>110</sup>(&ast;&ast;&ast;)
+<sup>111</sup>(&ast;&ast;&ast;&ast;)
+<sup>112</sup>(&ast;)
+<sup>113</sup>(&ast;&ast;)
+<sup>114</sup>(&ast;)
+<sup>115</sup>(&ast;&ast;)
 
 ---
 
 <sup>102</sup>(&ast;) You will find a short retrospective record, of the whole of the first three parts of Harvests and Sowings, in the two groups of notes "Les fruits du soir" ([n&deg; 179-182](../table-of-contents.md#fruits-soir)) and "Découverte d'un passé " ([n&deg; 183-186](../table-of-contents.md#decouverte-passe)).
 
-<sup>103</sup>(&ast;)
+<sup>103</sup>(&ast;) I am trying to express this difficulty, by the tale "La robe de l'Empereur de Chine", in the note with the same name ([n&deg; 77'](../table-of-contents.md#robe-note)), and returning to it again in the note "Le devoir accompli &mdash; ou l'instant de vérité" ([n&deg; 163](../table-of-contents.md#devoir-accompli))
 
-<sup>104</sup>(&ast;&ast;)
+<sup>104</sup>(&ast;&ast;) I give the account of this visit in the note just quoted (in the preceding footnote).
 
-<sup>105</sup>(&ast;)
+<sup>105</sup>(&ast;) This conversation makes the object of part e. ("L'Enterrement &mdash; ou la pente naturelle")  of the note "L'album de famille" ([n&deg; 173](../table-of-contents.md#album-famille)).
 
-<sup>106</sup>(&ast;&ast;)
+<sup>106</sup>(&ast;&ast;) In part c. &mdash ("Celui entre tous &mdash; ou l'acquiescement") of the same note ([n&deg; 173](../table-of-contents.md#album-famille)).
 
-<sup>107</sup>(&ast;&ast;&ast;)
+<sup>107</sup>(&ast;&ast;&ast;) This is, more or less, a quote from the note "Le Fossoyeur &mdash; ou la Congrégation toute entière" ([n&deg; 97](../table-of-contents.md#fossoyeur)).
 
-<sup>108</sup>(&ast;)
+<sup>108</sup>(&ast;) This quote is taken from the same note (see the preceding footnote), at the same page.
 
-<sup>109</sup>(&ast;&ast;)
+<sup>109</sup>(&ast;&ast;) In the light of [...]
 
 <sup>110</sup>(&ast;&ast;&ast;)
 
 <sup>111</sup>(&ast;&ast;&ast;&ast;)
+
+([n&deg; ](../table-of-contents.md#))
+([n&deg; ](../table-of-contents.md#))
+([n&deg; ](../table-of-contents.md#))
+([n&deg; ](../table-of-contents.md#))
 
 <sup>112</sup>(&ast;)
 
@@ -34,4 +57,3 @@ And surely, this movement did not end with my final point (very provisional!) in
 <sup>114</sup>(&ast;)
 
 <sup>115</sup>(&ast;&ast;)
-
